# SystemC_TLM_Learning

./: .gitignore  README
CsvDataTransfering/: CMakeLists.txt  CsvReader.hpp  Initiator.hpp  ReceiverModel.hpp  example.csv  main.cpp
Initiator_Receiver/: CMakeLists.txt  initiator.h  main.cpp  memory.h
ResponsStatus_DMI_Debug/: CMakeLists.txt  initiator.hpp  memory.hpp  tlm2_getting_started_2cpp.cpp
TestSampleCode/: CMakeLists.txt  main.cpp
